<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">
    <string name="exit">关闭</string>
    <string name="exit_tip">再按一次退出程序</string>
    <string name="app_name">万方App</string>
    <string name="action_settings">Settings</string>
    <string name="loginUserNameLabe1">用户名：</string>
    <string name="loginPwsLabe1">密          码：</string>
    <string name="loginRemember">记住密码</string>
    <string name="loginButton">登录</string>
    <string name="RegisterButton">注册</string>
    <string name="UserNameHint">请输入用户名</string>
     <string name="PwsHint">请输入密码</string>
     <string name="Page_refresh">下拉</string>
     <string name="Page_title">首页</string>
     <string name="logoff">注销</string>
     <string name="Menu_About">关于</string>
     <string name="Menu_LogOff">注销</string>
     <string name="AboutInfo">万方网络信息有限公司</string>
     <string name="OK">确定</string>
     <string name="cancle">取消</string>
     <string name="main_title">万方供应链管理器</string>
     <string name="show_menu">菜单</string>
     <string name="caigou_title">采购中心</string>
     <string name="search">搜索</string>
     <string name="input_tips">请输入..</string>
     
     <string name="number">单号:</string>
     <string name="dept_name">所属部门:</string>
     <string name="create_time">创建时间:</string>
     <string name="operating_date">操作时间:</string>
     <string name="operating_personnel">操作人:</string>
     <string name="state">状态:</string>
     <string name="money">金额:</string>
     <string name="oem_name">供应商:</string>
     <string name="remarks">备注:</string>
     <string name="operat_state">操作</string>
     <string name="unaudited">未审核</string>
     <string name="audit">审核中</string>
     <string name="none">无</string>
     <string name="basic_info">基本信息</string>
     <string name="detail_info">采购计划明细</string>
     <string name="refuse_txt">拒绝原因</string>
     <string name="review_title">审核</string>
     <string name="refuse">拒绝</string>
     <string name="documenttary_name">跟单人:</string>
     <string name="network_fail">网络连接失败，请检查您的网络！</string>
     <string name="null_value">空</string>
     <string name="refuse_cause_edit">请输入拒绝的原因</string>
     <string name="refuse_title_show">拒绝审批</string>
     <string name="return_btn">返回</string>
     <string name="fresh_fail">刷新数据失败！</string>
     
     <string name="sku">SKU:</string>
     <string name="WarnQuantity">预警数量:</string>
     <string name="PurchaQuantity">采购数量:</string>
     <string name="TotalAmount">总金额:</string>
     <string name="Spec">品名规格:</string>
     <string name="SaleStock">销售库存:</string>
     <string name="SevenSaleQuantity">七天销售量:</string>
     <string name="OEMName">供应商:</string>
     <string name="Quantity">数量:</string>
     <string name="UnitPrice">单价:</string>
     <string name="PredictDeliveryDate">预计到货日期:</string>
     <string name="isTaxFree">含税</string>
     <string name="Currency">币种:</string>
     <string name="network_error">网络异常，请检查您的网络！</string>
     <string name="parameter_error">请求参数错误！</string>
      <string name="service_error">服务端异常！</string>
     <string name="OEMInfo">供应商信息</string>
     
     <string name="plan_log">操作日志</string>
     <string name="plan_log_date">日期:</string>
      <string name="plan_log_person">操作人:</string>
      <string name="plan_log_state">状态：</string>
     <string name="plan_log_remark">备注：</string>
     <string name="dialog_tip">审核</string>
     <string name="review_success_tip">审核成功！</string>
     <string name="review_fail_tip">审核失败！</string>
     <string name="requset_fial">网络请求失败！</string>
     <string name="dialog_message">您确定需要审核吗？</string>
     <string name="no_data_tip">没有需要审核的订单数据</string>
     <string name="find_no_data_tip">没有查到您想要的数据</string>
     <string name="refuse_success_tip">拒绝成功</string>
      <string name="refuse_fail_tip">拒绝失败</string>
      <string name="refuse_cause_tip">请输入您要拒绝的原因！</string>
      <string name="refresh_success">刷新成功</string>
       <string name="refreshing">刷新...</string>
      <string name="trans_no_sort">按单号排序</string>
      <string name="login_network_error">登录失败,请检查您的网络!</string>
      <string name="user_pws_error">登录失败,请输入正确的用户名和密码！</string>
      <string name="login_tip">登录中..</string>
      <string name="get_data">获取数据..</string>
      <string name="commit_request">正在发送请求..</string>
      <string name="search_request">正在查询..</string>
      <string name="user_pws_null">用户名或密码不能为空</string>
       <string name="home_flag">万方网络供应链\n &#160;&#160;&#160;让世界随之改变</string>
     <!-- 自定义标题栏 -->
     <style name="CustomWindosTitleBackground">
     <item name="android:background">#d1eeee</item>
     </style>
     
     <style name="yzTest" parent="android:Theme">
         <item name="android:windowTitleSize">35dp</item>
         <item name="android:windowTitleBackgroundStyle">@style/CustomWindosTitleBackground</item>
     </style>
</resources>
