<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/register_activity_bg"
  >
  <RelativeLayout  android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
      android:id="@+id/menu"
    android:layout_centerVertical="true">
     <RelativeLayout
	    android:id="@+id/frist_logo" 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	   android:layout_centerHorizontal="true" 
      >
      <ImageView
          android:layout_centerHorizontal="true" 
          android:id="@+id/image_logo"  
          android:layout_width="wrap_content"
	      android:layout_height="wrap_content"
	      android:background="@drawable/logo"/>
      </RelativeLayout>
      
      <RelativeLayout
	    android:id="@+id/user_layout" 
	    android:layout_marginTop="20dp"
	    android:layout_below="@+id/frist_logo"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
      >
         <TextView
             android:id="@+id/userNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginUserNameLabe1"
        android:textSize="24px"
        android:textColor="#9932cc"
        android:textStyle="bold"
         />
          <EditText 
        android:layout_toRightOf="@+id/userNameText"
        android:text=""
        android:layout_alignTop="@+id/userNameText"
        android:background="@android:drawable/edit_text"
        android:hint="@string/UserNameHint"
        android:id="@+id/loginUserNameEdit"
        android:layout_width="300px"
        android:layout_height="wrap_content"/>
          
         <TextView
        android:id="@+id/psw_text"
        android:layout_marginTop="40px"
        android:layout_below="@+id/userNameText"
        android:layout_alignRight="@+id/userNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginPwsLabe1"
        android:textSize="24px"
        android:gravity="center_horizontal"
        android:textColor="#9932cc"
        android:textStyle="bold"
         />  
           <EditText 
         android:layout_below="@+id/loginUserNameEdit"
         android:layout_alignLeft="@+id/loginUserNameEdit"
        android:layout_alignTop="@+id/psw_text"
        android:hint="@string/PwsHint"
        android:password="true"
        android:layout_toRightOf="@+id/psw_text"
        android:nextFocusDown="@+id/loginSubmit"
        android:nextFocusRight="@+id/loginSubmit"
        android:id="@+id/loginPwsEdit"
        android:layout_width="300px"
        android:background="@android:drawable/edit_text"
        android:layout_height="wrap_content"/>
</RelativeLayout>

 <CheckBox 
     android:layout_below="@+id/user_layout"
       android:text="@string/loginRemember"
       android:id="@+id/loginRememberCheckBox" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40px"
       />
 <Button
     android:layout_below="@+id/loginRememberCheckBox"
      android:text="@string/loginButton"
      android:id="@+id/loginSubmit" 
      android:textSize="28px"
      android:layout_width="400px"
      android:textColor="#ffffff"
      android:background="@drawable/button_selector"
      android:layout_height="wrap_content"
      android:layout_centerHorizontal="true"
      />
  </RelativeLayout>

    <Button
        android:id="@+id/jump"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="#00000000"
        />
 
</RelativeLayout>
