<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:background="#ffffff">
    <include layout="@layout/review_title_layout" android:id="@+id/review_title_bar"/>
    <TextView android:id="@+id/basic_information_title"
                  android:layout_width="fill_parent"
                  android:layout_height="40dp"
                  android:layout_below="@+id/review_title_bar"
                  android:background="@color/basic_information_title_color"
                  android:text="@string/basic_info"
                  android:gravity="center_vertical"
                  android:paddingLeft="20dp"
                  android:textColor="#d2691e">
    </TextView>
    <ScrollView      android:id="@+id/scrollview"
                     android:layout_below="@+id/basic_information_title"
                     android:layout_width="fill_parent"
                     android:layout_height="fill_parent"
                     android:fillViewport="true">
    <RelativeLayout  
                     android:layout_width="fill_parent"
                     android:layout_height="fill_parent">
    
    <!-- 基本信息内容 -->
    <RelativeLayout 
        android:id="@+id/basic_information_context"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
  
    android:background="#e0ffff" >
    
    <RelativeLayout android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/frist_line">
                    <!-- 订单号 -->
    <TextView android:id="@+id/number_item_table"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="14sp"
                 android:textColor="#000000"
                 android:gravity="center_vertical"
                 android:textStyle="bold"
                 android:text="@string/number"
                 android:layout_marginLeft="40dp"
                 android:layout_marginTop="10dp"
                 />
    <TextView android:id="@+id/number_item"
              android:layout_toRightOf="@+id/number_item_table"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:textSize="14sp"
                 android:textColor="#000000"
                 android:gravity="center_vertical"
                 android:paddingLeft="10dp"
                 android:layout_marginTop="10dp"
                 />
                  <!-- 金额 -->
     <TextView android:id="@+id/money_item_table"
               android:layout_below="@+id/number_item_table"
                android:layout_alignRight="@+id/number_item_table"
              
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="14sp"
                 android:textColor="#000000"
                 android:gravity="center_vertical|right"
                 android:textStyle="bold"
                 android:text="@string/money" 
                 android:layout_marginTop="10dp"
                />
     <TextView android:id="@+id/money_item"
                 android:layout_toRightOf="@+id/money_item_table"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/number_item_table"
                 android:textSize="14sp"
                 android:textColor="#000000"
                 android:gravity="center_vertical"
                 android:paddingLeft="10dp"
                 android:layout_marginTop="10dp"
                />
     <!-- 操作人 -->
      <TextView android:id="@+id/op_person_item_table"
                 android:textStyle="bold"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="14sp"
                 android:textColor="#000000"
                 
                 android:gravity="center_vertical"
                 android:text="@string/operating_personnel" 
                 android:layout_below="@+id/money_item_table"
                 android:layout_alignRight="@+id/money_item_table"
                 android:layout_marginTop="10dp"
                />
     <TextView android:id="@+id/op_person_item"
                 android:layout_toRightOf="@+id/op_person_item_table"
                  android:layout_below="@+id/money_item_table"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:textSize="14sp"
                 android:textColor="#000000"
                 android:gravity="center_vertical"
                 android:paddingLeft="10dp"
                 android:layout_marginTop="10dp"
                />
              <!-- 操作时间 -->
      <TextView
          android:id="@+id/create_time_item_table"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_below="@+id/op_person_item_table"
          android:text="@string/operating_date"
          android:textColor="#000000"
          android:textSize="14sp"
          android:layout_alignRight="@+id/op_person_item_table"
          android:layout_marginTop="10dp"
          android:textStyle="bold" />

        <TextView android:id="@+id/create_time_item"
                 android:layout_toRightOf="@+id/create_time_item_table"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/op_person_item_table"
                 android:textSize="14sp"
                 android:textColor="#000000"
                 android:gravity="center_vertical"
                  android:paddingLeft="10dp"
                  android:layout_marginTop="10dp"
                />
        <!-- 部门名称 -->
         <TextView android:id="@+id/dept_name_item_table"
                 android:layout_below="@+id/create_time_item_table"
                 android:layout_alignRight="@+id/create_time_item_table"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="14sp"
                 android:textColor="#000000"
                 android:gravity="center_vertical"
                 android:text="@string/dept_name" 
                
                 android:textStyle="bold"
                 android:layout_marginTop="10dp"
                />
          <TextView android:id="@+id/dept_name_item"
                 android:layout_toRightOf="@+id/dept_name_item_table"
                 android:layout_below="@+id/create_time_item_table"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:textSize="14sp"
                 android:textColor="#000000"
                 android:gravity="center_vertical"
                  android:paddingLeft="10dp"
                  android:layout_marginTop="10dp"
                />
             <!-- 跟单人姓名 -->
             <TextView android:id="@+id/documentary_person_table"
                     android:layout_below="@+id/dept_name_item_table"
                     android:layout_alignRight="@+id/dept_name_item_table"
	                 android:layout_width="wrap_content"
	                 android:layout_height="wrap_content"
	                 android:textSize="14sp"
	                 android:textColor="#000000"
	                 android:text="@string/documenttary_name" 
	                 android:textStyle="bold"
	                 android:gravity="center_vertical|right"
	                 android:layout_marginTop="10dp"
                />
            <TextView android:id="@+id/documentary_person"
                 android:layout_toRightOf="@+id/documentary_person_table"
                  android:layout_below="@+id/dept_name_item_table"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:textSize="14sp"
                 android:textColor="#000000"
                 android:gravity="center_vertical"
                 android:paddingLeft="10dp"
                 android:layout_marginTop="10dp"
                />
         
           
            <!-- 备注 -->
            <TextView android:id="@+id/remark_item_table"
                  android:layout_below="@+id/documentary_person_table"
                     android:layout_alignRight="@+id/dept_name_item_table"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="14sp"
                 android:textColor="#000000"
                 android:gravity="center_vertical"
                 android:layout_marginTop="10dp"
                 android:textStyle="bold"
                 android:text="@string/remarks"
                 />
            
            <TextView android:id="@+id/remark_item"
                 android:layout_toRightOf="@+id/remark_item_table"
                 android:layout_below="@+id/documentary_person_table"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:textSize="14sp"
                 android:textColor="#000000"
                 android:gravity="center_vertical"
                 android:singleLine="true"
                android:layout_marginTop="10dp"
                 android:paddingLeft="10dp"
                />
         <TextView android:layout_width="fill_parent"
                    android:layout_height="10dp"
                   
                   android:layout_below="@+id/remark_item"
                    />    
       </RelativeLayout>
  </RelativeLayout>
  <TextView android:id="@+id/plan_detail_title"
      android:layout_below="@+id/basic_information_context"
                  android:layout_width="fill_parent"
                  android:layout_height="40dp"
                  android:background="@color/basic_information_title_color"
                  android:text="@string/detail_info"
                  android:gravity="center_vertical"
                  android:paddingLeft="20dp"
                  android:textColor="#d2691e">
    </TextView>
    <com.wanfang.Util.MyListView android:id="@+id/detail_listview" 
              android:layout_below="@+id/plan_detail_title"
              android:background="#f0f8ff"
              android:layout_width="fill_parent"
              android:layout_height="150dp">
    </com.wanfang.Util.MyListView>
      <TextView android:layout_width="fill_parent"
                     android:layout_height="5dp"
                     android:background="#9f79ee"
                     android:layout_below="@+id/detail_listview"
                     android:id="@+id/line"/>
     <RelativeLayout android:id="@+id/review_affair_layout"
                     android:layout_below="@+id/line"
                     android:background="#c1cdc1"
                     android:layout_width="fill_parent"
                     android:layout_height="45dp" >
   
      <RelativeLayout android:id="@+id/review_affair"
                     android:layout_centerVertical="true"
                     android:layout_centerHorizontal="true"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" >
        
          <Button  
                 android:id="@+id/review_button"
                 android:layout_width="45dp"
                 android:layout_height="30dp"
                 android:text="@string/review_title"
                 android:gravity="center"
                 android:textSize="14sp"
                 android:textColor="#ffffff"
                 android:background="@drawable/review_button_selector"
                 android:layout_alignParentLeft="true"
                 android:layout_centerVertical="true"
                 />
           <Button  
                 android:id="@+id/review_exit_button"
                 android:layout_width="45dp"
                 android:layout_height="30dp"
                 android:layout_toRightOf="@+id/review_button"
                 android:layout_marginLeft="50dp"
                 android:text="@string/return_btn"
                 android:gravity="center"
                 android:textSize="14sp"
                 android:textColor="#ffffff"
                  android:background="@drawable/review_button_selector"
                 android:layout_centerVertical="true"
                 
                 />
           <Button  
                 android:id="@+id/refuse_button"
                 android:layout_toRightOf="@+id/review_exit_button"
                 android:layout_marginLeft="50dp"
                 android:layout_width="45dp"
                 android:layout_height="30dp"
                 android:text="@string/refuse"
                 android:gravity="center"
                 android:textSize="14sp"
                 android:textColor="#ffffff"
               android:background="@drawable/review_button_selector"
                 android:layout_centerVertical="true"
                 />
      </RelativeLayout>
      </RelativeLayout>
      <!-- 操作日志 -->
      <TextView android:id="@+id/plan_log_title"
      android:layout_below="@+id/review_affair_layout"
                  android:layout_width="fill_parent"
                  android:layout_height="40dp"
                  android:background="@color/basic_information_title_color"
                  android:text="@string/plan_log"
                  android:gravity="center_vertical"
                  android:paddingLeft="20dp"
                  android:textColor="#d2691e">
      </TextView>
       <ListView
              android:id="@+id/plan_log_listview" 
              android:layout_below="@+id/plan_log_title"
              android:background="#f0f8ff"
              android:layout_width="fill_parent"
              android:layout_height="200dp">
    </ListView>
  
    </RelativeLayout>
    </ScrollView>
</RelativeLayout>
